--- a/views/config_booking.erb
+++ b/views/config_booking.erb
@@ -48,7 +48,6 @@
                   t.booking_settings.form.renting)%>
                 <%= render_variable_checkbox_boolean('booking.activities',
                   t.booking_settings.form.activities)%>
-                <% #render_variable_select('booking.mode', t.booking_settings.form.booking_mode.title, booking_modes) %>
                 <%= render_variable_textarea('booking.notification_email', t.booking_settings.form.notification_email) %>
                 <div class="formrow-botonera top-separator top-space">
                   <input type="submit" value="<%=t.entitymanagement.update%>" class="button blue-button">
@@ -162,6 +161,7 @@
                   <div class="grid_6">
                     <form name="variables" action="/api/variables" method="PUT" 
                           data-remote="ajax" data-remote-method="PUT">
+                      <%= render_variable_checkbox_boolean('order.request_reservations', t.booking_settings.form.activities_request_reservation) %>
                       <%= render_variable_checkbox_boolean('order.payment', t.booking_settings.form.activities_payment) %>
                       <%= render_variable_checkbox_boolean('order.allow_deposit_payment', t.booking_settings.form.activities_allow_deposit_payment) %>
                       <%= render_variable_input_text('order.deposit', t.booking_settings.form.activities_deposit, 2, 2) %>
