--- a/views/reservation_activities_checkout.erb
+++ b/views/reservation_activities_checkout.erb
@@ -49,12 +49,16 @@
                       <span><%=t.new_reservation_activity.go_to_pay_line2%></span><br/>
 	      	        </button>
 	              </div>
+	              <% if @activities_request_reservation %>
 	        	  <div style="display:inline-block">	            
 	                <button type="submit" name="pay_now" value="false" id="button_confirmar_reserva" class="form-button botones">
                        <span><%=t.new_booking.confirm_line1%></span><br/>
                        <span><%=t.new_booking.confirm_line2%></span>
 	                </button>
 	              </div>
+	              <% else %>
+	              <div class="highlight_block"><%=t.new_reservation_activity.payment_information%></div>
+	              <% end %>
               </div>
          </div>
        </form>
