--- a/views/_booking_selector.erb
+++ b/views/_booking_selector.erb
@@ -9,7 +9,21 @@
             </label> 
 		      	<% if booking_item_family.time_to_from %>
               <input type="text" name="datefrom" id="datefrom" class="date_control" size="15" maxlength="10"/>
-		        	<select name="timefrom" id="timefrom"> 
+		        	<select name="timefrom" id="timefrom">
+                          <option value="0:00">0:00</option>
+                          <option value="0:30">0:30</option>
+                          <option value="1:00">1:00</option>
+                          <option value="1:30">1:30</option>
+                          <option value="2:00">2:00</option>
+                          <option value="2:30">2:30</option>
+                          <option value="3:00">3:00</option>
+                          <option value="3:30">3:30</option>
+                          <option value="4:00">4:00</option>
+                          <option value="4:30">4:30</option>
+                          <option value="5:00">5:00</option>
+                          <option value="5:30">5:30</option>
+                          <option value="6:00">6:00</option>
+                          <option value="6:30">6:30</option>               
 					      <option value="7:00">7:00</option>
 					      <option value="7:30">7:30</option>
 					      <option value="8:00">8:00</option>
@@ -72,7 +86,21 @@
             </label> 
             <% if booking_item_family.time_to_from %>
 		      	  <input type="text" name="dateto" id="dateto" class="date_control" size="15" maxlength="10"/>
-		      	  <select name="timeto" id="timeto"> 
+		      	  <select name="timeto" id="timeto">
+                          <option value="0:00">0:00</option>
+                          <option value="0:30">0:30</option>
+                          <option value="1:00">1:00</option>
+                          <option value="1:30">1:30</option>
+                          <option value="2:00">2:00</option>
+                          <option value="2:30">2:30</option>
+                          <option value="3:00">3:00</option>
+                          <option value="3:30">3:30</option>
+                          <option value="4:00">4:00</option>
+                          <option value="4:30">4:30</option>
+                          <option value="5:00">5:00</option>
+                          <option value="5:30">5:30</option>
+                          <option value="6:00">6:00</option>
+                          <option value="6:30">6:30</option>               
                 <option value="7:00">7:00</option>
                 <option value="7:30">7:30</option>
                 <option value="8:00">8:00</option>
