--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -41,7 +41,7 @@
         <li><a href='/admin/booking/reports/pending-confirmation'><%=t.booking_console.report_pending_confirmation%></a></li>
         <li><a href='/admin/booking/reports/in-progress'><%=t.booking_console.report_in_progress%></a></li>        
         <li><a href='/admin/booking/planning'><%=t.booking_console.planning%></a></li>    
-        <li><a href='/admin/booking/planning2?from=2016-06-01&to=2016-12-31'><%=t.booking_console.planning%> NUEVO</a></li> 
+        <li><a href="/admin/booking/planning2?from=<%=Date.today.strftime('%Y-%m-%d')%>&to=<%=(Date.today + 180).strftime('%Y-%m-%d')%>"><%=t.booking_console.planning%> NUEVO</a></li> 
         <li><a href='/admin/booking/reports/pickup-return'><%=t.booking_console.report_pickup_return%></a></li>
         <li><a href='/admin/booking/resources-occupation'><%=t.booking_console.check_availability%></a></li>  
         <li><a href='/admin/booking/monthly-occupation'><%=t.booking_console.monthly_occupation%></a></li>
