--- a/views/_prereservation_form.erb
+++ b/views/_prereservation_form.erb
@@ -1,5 +1,5 @@
       <form id="prereservation_form" name="element" class="form-element all-space" style="background: white">
-        <h3 id="prereservation_title" class="bottom-border-solid"><%=t.bookings_planning.prereservation.create_title%></h3>
+        <h3 id="prereservation_title" class="highlight_block smaller_text"><%=t.bookings_planning.prereservation.create_title%></h3>
         <input type="hidden" name="id" id="id"/>
         <div class="formrow">
           <label class="fieldtitle"><%=t.bookings_planning.prereservation.from%></label>
