--- a/views/bookings_planning_v2.erb
+++ b/views/bookings_planning_v2.erb
@@ -1,5 +1,6 @@
 <div class="top-navigation-bar">
-<h2 class="entity-title"><%=t.bookings_planning.title%></h2>
+  <h2 class="entity-title"><%=t.bookings_planning.title%></h2>
+  <div id="notification_container" class="highlight_block smaller_text right-float" style="position:relative; top: -10px; display: none">Notificación</div>
 </div>
 <div class="admin_content_wrapper">
   <%= partial :booking_planning %>
