--- a/views/_booking_planning.erb
+++ b/views/_booking_planning.erb
@@ -54,6 +54,14 @@
    width: 1.6em;
    font-size: 0.85em;
  }
+ #operation_area {
+   max-height: 390px; 
+   overflow-y: scroll;
+ }
+ .working_area {
+    max-height: 280px;
+    overflow-y: scroll;
+ }
 </style>
 <div class="container_12">
   <div class="grid_9">
@@ -77,7 +85,7 @@
           </div>
         </form>
       </div>
-      <div id="operation_area" style="max-height: 390px; overflow-y: scroll">
+      <div id="operation_area">
       </div>
       <div id="operation_bottom">
         <form name="assign_pending_search">
@@ -90,19 +98,6 @@
     <div id="prereservation_container" class="left-margin smaller_text" style="display:none; max-height: 350px; overflow-y: scroll">
       <%= partial :prereservation_form %> 
     </div>    
-  </div>
-</div>
-<div class="container_12">
-  <div class="grid_6">
-    <div class="guiblock smaller_text">
-      <h3 style="font-size: 1.2em">Filtros</h3>
-    </div>
-  </div>
-  <div class="grid_6">
-    <div class="guiblock smaller_text left-margin">
-      <p>Para reasignar el recurso de una reservar, haga click sobre una celda del planning para seleccionar la reserva y a continuación vuelva a hacer click sobre la casilla
-      correspondiente al nuevo recurso a asignar</p>
-    </div>
   </div>
 </div>
 
