--- a/views/booking_planning_pending_assignation.erb
+++ b/views/booking_planning_pending_assignation.erb
@@ -1,14 +1,15 @@
 <div id="pending_assignation_container" class="container right-space">
+<div id="pending_assignation_holder" class="right-space working_area">
   <div class="grid_12">
-  	<% if @bookings.size == 0 %>
+    <% if @bookings.size == 0 %>
       <div class="guiblock">
-  	    <p>No hay reservas pendientes de asignación</p>
-  	  </div>
-  	<% else %>
-        <h3 class="guiblock smaller_text" style="background-color: #DDD">Reservas pendientes de asignar</h3>
-  	    <% last = nil %>
+        <p>No hay reservas pendientes de asignación</p>
+      </div>
+    <% else %>
+        <h3 class="guiblock smaller_text uppercase_text" style="background-color: #DDD">Reservas pendientes de asignar</h3>
+        <% last = nil %>
         <% number_of_bookings = 0 %>
-      	<% @bookings.each do |booking| %>
+        <% @bookings.each do |booking| %>
           <% if last != booking %>
           <div class="pending_assignation_item guiblock bottom-margin">
             <div>
@@ -26,15 +27,15 @@
             <table class="pending-assignation-table table">
               <thead class="table-header">
                 <tr>
-                  <th class="table-cell left_text" scope="col" style="width:55%">Producto</th>
-                  <th class="table-cell left_text" scope="col" style="width:45%">Acciones</th>      
+                  <th class="table-cell left_text" scope="col" style="width:70%">Producto</th>
+                  <th class="table-cell left_text" scope="col" style="width:30%">Acciones</th>      
                 </tr>
               </thead>
               <tbody class="table-tbody">
           <% booking.booking_lines.each do |booking_line| %>
             <% booking_line.booking_line_resources.each do |booking_line_resource| %>
               <% if booking_line_resource.booking_item_reference.nil? %>
-                <tr class="table-row">
+                <tr class="table-row pending_assign_row" rel="<%=booking_line_resource.id%>">
                   <td class="table-cell">
                      <div><b><%=booking_line.item_id%></b>
                      <% if @product_family.height or @product_family.weight %>
@@ -44,7 +45,7 @@
                   </td>
                   <td class="table-cell">
                     <form>
-                      <input type="button" class="form-button green-button" value="Asignar"/>
+                      <input type="button" class="pending_assign_button form-button blue-button" style="padding:2px; min-width: 45px" value="Asignar" data-id="<%=booking_line_resource.id%>" data-date-from="<%=booking.date_from.strftime('%Y-%m-%d')%>" data-date-to="<%=booking.date_to.strftime('%Y-%m-%d')%>"/>
                     </form>
                   </td>
                 </tr>
@@ -60,7 +61,11 @@
             <% number_of_bookings += 1 %>
           <% end %>
         <% end %>
-        <p>Hay <b><%=@bookings.size%></b> recursos (correspondientes a <b><%=number_of_bookings%></b> reservas) pendientes de asignar</p>        
-  	<% end %>
+        <p>Hay <b><%=@bookings.size%></b> recursos (correspondientes a <b><%=number_of_bookings%></b> reservas) pendientes de asignar</p> 
+    <% end %>
   </div>
+</div>
+<div>
+  <%= partial :booking_planning_assign_form %> 
+</div>
 </div>
