--- a/views/booking_planning_pending_assignation.erb
+++ b/views/booking_planning_pending_assignation.erb
@@ -23,7 +23,14 @@
             </div>
             <div>
                <strong style="width: 80px; display:inline-block">Fecha fin:</strong> <b><%=booking.date_to.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=booking.time_to%><%end%></b>
-            </div>     
+            </div>    
+            <div><strong style="width: 80px; display:inline-block">Color:</strong></div>
+            <form name="color">
+              <input type="hidden" name="id" value="<%=booking.id%>"/>
+              <input type="hidden" name="type" value="booking"/>
+              <input type="color" name="planning_color" class="color" value="<%=booking.planning_color%>" style="width:95%; top-margin: 10px"/>
+            </form>
+
             <table class="pending-assignation-table table">
               <thead class="table-header">
                 <tr>
@@ -45,10 +52,22 @@
                   </td>
                   <td class="table-cell">
                     <form>
-                      <input type="button" class="pending_assign_button form-button blue-button" style="padding:2px; min-width: 45px" value="Asignar" data-id="<%=booking_line_resource.id%>" data-date-from="<%=booking.date_from.strftime('%Y-%m-%d')%>" data-date-to="<%=booking.date_to.strftime('%Y-%m-%d')%>"/>
+                      <input type="button" class="pending_assign_button form-button blue-button" style="padding:2px; min-width: 45px" value="Asignar" data-id="<%=booking_line_resource.id%>" data-date-from="<%=booking.date_from.strftime('%Y-%m-%d')%>" data-date-to="<%=booking.date_to.strftime('%Y-%m-%d')%>" data-planning-color="<%=booking.planning_color%>"/>
                     </form>
                   </td>
                 </tr>
+              <% else %>
+                <tr class="table-row pending_assign_row" rel="<%=booking_line_resource.id%>">
+                  <td class="table-cell">
+                     <div><b><%=booking_line.item_id%></b>
+                     <% if @product_family.height or @product_family.weight %>
+                     <div><em>a:</em> <%=booking_line_resource.customer_height%> <em>p:</em> <%=booking_line_resource.customer_weight%>
+                     <% end %>
+                     </div>
+                  </td>
+                  <td  class="table-cell">
+                     <div><%=booking_line_resource.booking_item_category%> - <%=booking_line_resource.booking_item_reference%></div>                  
+                  </td>
               <% end %>
             <% end %> 
           <% end %> 
